<resources>
    <string name="app_name">TCG Deck Builder And Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_card">Add a card?</string>

    <string name="hint_name">Name...</string>
    <string name="hint_rpsType">Type 1 for rock, 2 for scissors, and 3 for paper</string>
    <string name="hint_type"> 1 or 2...</string>
    <string name="hint_subType">1 or 2...</string>
    <string name="hint_power">Any number </string>
    <string name="hint_slots">Any single digit number</string>

    <string name="hint_username">Username...</string>
    <string name="hint_password">Password...</string>
    <string name="hint_password2">Same password as earlier...</string>

    <string name="button_save">Save</string>
    <string name="empty_not_saved">Card is not saved because of some error within the card creation </string>
</resources>