
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2">

        <EditText
            android:id="@+id/edit_cName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_name"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnSpan="2"/>

        <EditText
            android:id="@+id/edit_rpsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_rpsType"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnSpan="2"/>

        <EditText
            android:id="@+id/edit_type"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_type"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="2"/>

        <EditText
            android:id="@+id/edit_subtype"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_subType"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="2"/>

        <EditText
            android:id="@+id/edit_power"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_power"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="3"/>

        <EditText
            android:id="@+id/edit_slots"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_slots"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="3"/>

        <EditText
            android:id="@+id/edit_dupesAllowed"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_type"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_isLegal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_type"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="#212121"
            app:layout_columnSpan="2"/>
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>