
<!-- TODO: Find out how to actually center objects -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">


        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <EditText
            android:id="@+id/edit_isUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_username"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_isPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_password"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/edit_isPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_password2"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="#212121"
            android:textSize="22sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>